ZEUS-317 Upgraded to Spring Boot 3.3.3